--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,4 +1,22 @@
-<h1>Feeld Backend Test</h1>
+<div class="logo">
+    <img src="/images/feeld-logo.png" alt="`Feeld Logo">
+</div>
+<div class="content">
+    <div class="inner">
+        <h1>Feeld Backend</h1>
+        <p>
+            This is my take on the <a href="https://github.com/Feeld/backend-developer-test">Feeld Backend Developer
+                Test</a>. <br>
+            Check out the <a href="https://github.com/zlotny/backend-developer-test">source on Github</a>.
+        </p>
+        <p>It consists on a REST backend for managing a board-game searching app.</p>
+        <p>Author: <a href="https://github.com/zlotny">Andrés Vieira</a></p>
+    </div>
+</div>
+<nav>
+    <ul>
+        <li><a href="/connect/google">&nbsp;&nbsp;&nbsp;Google Auth</a></li>
+        <li><a href="/connect/facebook">Facebook Auth</a></li>
 
-<a href="/connect/google">Login with google</a><br><br>
-<a href="/connect/facebook">Login with facebook</a>
+    </ul>
+</nav>
