Adds API documentation support
It is empty for now as it serves as a tool to start working on
documentatio for the platform. It will be filled at the same time
endpoints are revisited and refactored.

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -15,8 +15,8 @@
 </div>
 <nav>
     <ul>
-        <li><a href="/connect/google">&nbsp;&nbsp;&nbsp;Google Auth</a></li>
+        <li><a href="/connect/google">Google Auth</a></li>
+        <li><a href="/api-docs">API Docs</a></li>
         <li><a href="/connect/facebook">Facebook Auth</a></li>
-
     </ul>
 </nav>
